# Ai-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test_agent.py  test_hybrid.py  test_metadata.py  test_reranker.py
app/: run_ingestion.py
app/api/: routes.py
app/ingestion/: loader.py  splitter.py  vector_ops.py
app/rag/: agent.py  generator.py  retriever.py  tools.py
data/chroma_db/: chroma.sqlite3
docker/chroma_data/: chroma.sqlite3
eval/: eval_results.csv  evaluate.py  test_dataset.json
frontend/: app.py
rag/: loader.py  splitter.py  store.py
