[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
